--- a/src/Xunet.MiniApi.csproj
+++ b/src/Xunet.MiniApi.csproj
@@ -9,7 +9,7 @@
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<LangVersion>latest</LangVersion>
 		<!-- version numbers will be updated by build -->
-		<Version>1.0.13</Version>
+		<Version>1.0.14</Version>
 		<TotalDays>$([System.DateTime]::Now.Date.Subtract($([System.DateTime]::Parse($([System.String]::Format("{0}-4-13",2025))))).TotalDays)</TotalDays>
 		<AssemblyVersion>$(Version).$(TotalDays)</AssemblyVersion>
 		<FileVersion>$(Version).$(TotalDays)</FileVersion>
@@ -35,6 +35,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AlibabaCloud.SDK.Dysmsapi20170525" Version="4.0.0" />
 		<PackageReference Include="Aliyun.OSS.SDK.NetCore" Version="2.14.1" />
 		<PackageReference Include="AutoMapper" Version="14.0.0" />
 		<PackageReference Include="Caching.CSRedis" Version="3.8.800" />
