--- a/simples/appsettings.Development.json
+++ b/simples/appsettings.Development.json
@@ -21,6 +21,12 @@
     "DefaultConnection": "server=127.0.0.1;uid=root;pwd=root;database=miniapi;max pool size=8000;Charset=utf8;SslMode=none;Allow User Variables=True;",
     "RedisConnection": "127.0.0.1:6379"
   },
+  "StorageOptions": [
+    {
+      "ConfigId": 0,
+      "ConnectionString": "DefaultConnection"
+    }
+  ],
   "JwtConfig": {
     "ValidateIssuer": true,
     "ValidIssuer": "miniapi",
