--- a/src/Xunet.MiniApi.csproj
+++ b/src/Xunet.MiniApi.csproj
@@ -9,7 +9,7 @@
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<LangVersion>latest</LangVersion>
 		<!-- version numbers will be updated by build -->
-		<Version>1.0.43</Version>
+		<Version>1.0.44</Version>
 		<TotalDays>$([System.DateTime]::Now.Date.Subtract($([System.DateTime]::Parse($([System.String]::Format("{0}-4-13",2025))))).TotalDays)</TotalDays>
 		<AssemblyVersion>$(Version).$(TotalDays)</AssemblyVersion>
 		<FileVersion>$(Version).$(TotalDays)</FileVersion>
@@ -17,8 +17,8 @@
 		<Company>徐来</Company>
 		<Title>Xunet.MiniApi</Title>
 		<Product>Xunet.MiniApi</Product>
-		<Description>.NET Minimal Api Support</Description>
-		<Summary>.NET Minimal Api Support</Summary>
+		<Description>.NET 最小API支持，内置认证、授权、缓存、限流、参数验证、实体映射、对象存储、多数据库、消息队列、短信服务、微信开发、自定义请求处理等中间件。</Description>
+		<Summary>.NET 最小API支持，开箱即用。</Summary>
 		<Copyright>Copyright © 徐来 Xulai 2025</Copyright>
 		<RootNamespace>Xunet.MiniApi</RootNamespace>
 		<AssemblyName>Xunet.MiniApi</AssemblyName>
@@ -35,9 +35,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="AlibabaCloud.SDK.Dysmsapi20170525" Version="4.0.0" />
+		<PackageReference Include="AlibabaCloud.SDK.Dysmsapi20170525" Version="4.0.1" />
 		<PackageReference Include="Aliyun.OSS.SDK.NetCore" Version="2.14.1" />
-		<PackageReference Include="AutoMapper" Version="14.0.0" />
+		<PackageReference Include="AutoMapper" Version="15.0.1" />
 		<PackageReference Include="Caching.CSRedis" Version="3.8.800" />
 		<PackageReference Include="FluentScheduler" Version="5.5.2" />
 		<PackageReference Include="FluentValidation" Version="12.0.0" />
@@ -45,23 +45,23 @@
 		<PackageReference Include="OpenIddict.AspNetCore" Version="6.4.0" />
 		<PackageReference Include="OpenIddict.EntityFrameworkCore" Version="6.4.0" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
-		<PackageReference Include="SkiaSharp" Version="3.119.0" />
-		<PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="3.119.0" />
-		<PackageReference Include="SqlSugarCore" Version="5.1.4.199" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
-		<PackageReference Include="TencentCloudSDK" Version="3.0.1303" />
+		<PackageReference Include="SkiaSharp" Version="3.119.1" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="3.119.1" />
+		<PackageReference Include="SqlSugarCore" Version="5.1.4.203" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.4" />
+		<PackageReference Include="TencentCloudSDK" Version="3.0.1324" />
 		<PackageReference Include="Tencent.QCloud.Cos.Sdk" Version="5.4.49" />
 		<PackageReference Include="RabbitMQ.Client" Version="7.1.2" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)'=='net8.0'">
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.19" />
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.19" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.20" />
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.20" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)'=='net9.0'">
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
-		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
+		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -92,4 +92,3 @@
 	</ItemGroup>
 
 </Project>
- 
