--- a/simples/Xunet.MiniApi.Simples.csproj
+++ b/simples/Xunet.MiniApi.Simples.csproj
@@ -8,6 +8,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <None Remove="Entities\Dtos\Requests\jguo0abn.cof~" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
 	</ItemGroup>
 
